tests/NormalTests/paczka1/fuzzy1/74973418.err
Error in line 3: 4eBP6PX S91P 34,1
Error in line 1: dv0AmG S26 50,7
Error in line 2: qsGvw A369 72,2
Error in line 5: 4eBP6PX S910 85,6
Error in line 19: Elxq8zH A369 82,7
Error in line 21: 4eBP6PX A44 97,8
Error in line 26: Elxq8zH A44 87,91
Error in line 24: Iti2h A44 94,0
Error in line 32: Iti2h A369 64,7
Error in line 23: Elxq8zH A44 33,5
Error in line 34: Iti2h S910 12,6
